fix(themes): added line height in themes reset breaking alignment (#6305)
* fix(themes): removes a level line height from reset

* docs(changeset): fix: removes a level line height from reset

--- a/packages/themes/src/base/reset.css
+++ b/packages/themes/src/base/reset.css
@@ -126,7 +126,6 @@
     --font-color: var(--scalar-link-color, var(--scalar-color-accent));
     --font-visited: var(--scalar-link-color-visited, var(--scalar-color-2));
 
-    line-height: 1.625;
     text-decoration: var(--scalar-text-decoration);
     color: var(--font-color);
     font-weight: var(--scalar-link-font-weight, var(--scalar-semibold));
